# rl-foundations

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: dqn.py  dqn_atari.py  simple_vpg.py  vpg.py  watch_agent.py  watch_atari_agent.py
src/: atari_wrappers.py  core.py
src/tests/: test_core.py
