[project]
name = "rl-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[classic-control]>=1.2.0",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "psutil>=7.1.1",
    "torch>=2.7.1",
    "tyro>=0.9.35",
    "wandb>=0.21.0",
]
